--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ tasks.named('test') {
 jar {
     manifest {
         attributes(
-                'Main-Class':'com.root.roordex.RootDexApplication'
+                'Main-Class':'com.root.rootdex.RootDexApplication'
         )
     }
 }
