--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.20'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -25,7 +27,7 @@ tasks.named('test') {
 jar {
     manifest {
         attributes(
-                'Main-Class':'com.root.rootdex.RootDexApplication'
+                'Main-Class':'RootDexApplication'
         )
     }
 }
