--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ tasks.named('test') {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.root.rootdex.RootDexApplication.java'
+                'Main-Class': 'com.root.rootdex.RootDexApplication'
         )
     }
 }
